--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
  <a href="test.html">test</a>
+ <a href="https://pages.github.com/">how to create github page</a>
 </body>
 </html>
